# git-python

./: README.md  flake.nix  pyproject.toml
nix/: devShells.nix
pythonedaeventgitpython/: git_repo_requested_for_python_package.py  python_git_repo_found.py
